--- a/.dockerignore
+++ b/.dockerignore
@@ -6,8 +6,8 @@
 # emacs files
 *~
 
-nuscr/*.install
-nuscr/_build/
-nuscr/.merlin
-nuscr/.circleci
-nuscr/.mergify
+**/*.install
+**/_build/
+**/.merlin
+**/.circleci
+**/.mergify
